# hangman

./: README.md  pyproject.toml
src/hangman/: config.py  main.py
src/hangman/data/: fetcher.py  scraper.py  storage.py
src/hangman/models/: word.py
